@@ -28,6 +28,7 @@
         <spotbugs.version>4.8.3.1</spotbugs.version>
         <owasp.version>9.0.9</owasp.version>
         <checkstyle.version>3.3.1</checkstyle.version>
+        <skipDependencyCheck>false</skipDependencyCheck>
     </properties>
 
     <dependencies>
@@ -191,10 +192,11 @@
                 <configuration>
                     <failBuildOnCVSS>7</failBuildOnCVSS>
                     <skipSystemScope>true</skipSystemScope>
-                    <nvdApiKey>${nvdApiKey}</nvdApiKey>
+                    <nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
                     <nvdApiDelay>10000</nvdApiDelay>
                     <connectionTimeout>60000</connectionTimeout>
                     <readTimeout>60000</readTimeout>
+                    <skip>${skipDependencyCheck}</skip>
                 </configuration>
                 <executions>
                     <execution>
@@ -254,7 +256,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <argLine>${argLine}</argLine>
+                    <argLine>${argLine} -XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -265,6 +267,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- Surefire for Unit Tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${argLine} -XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
